--- a/index.html
+++ b/index.html
@@ -6,43 +6,50 @@
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
     <link rel="stylesheet" href="public/css/styles.css">
     <script src="js/lib/angular.min.js"></script>
-    <script src="js/model/data.js"></script>
+    <script src="js/controller/indexCtrl.js"></script>
+    <script src="js/controller/addCtrl.js"></script>
     <script src="js/controller/textCtrl.js"></script>
-
+    <script src="js/directives/productList.js"></script>
+    <script src="js/filters/customFilter.js"></script>
+    <script src="js/services/dataService.js"></script>
 </head>
-<body>
+<body ng-controller="IndexCtrl">
     <div class="container">
         <h1>Shopping list</h1>
         <hr>
         <div class="form-inline" ng-controller="addCtrl">
-            <div class="form-group">
-                <label for="product">Product</label>
-                <input type="text" class="form-control" id="product" ng-model="text" >
-            </div>
-            <div class="form-group">
-                <label for="price">Price</label>
-                <input type="number" class="form-control" id="price" ng-model="price" >
-            </div>
-            <button class="btn btn-primary" ng-click="addItem(text, price)">ADD</button>
+            <form name="addForm">
+                <div class="form-group">
+                    <label for="product">Product</label>
+                    <input type="text" class="form-control" id="product" ng-model="product" required >
+                </div>
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <input type="number" class="form-control" id="price" ng-model="price" required>
+                </div>
+                <button class="btn btn-primary" ng-click="addItem(product, price, addForm)">ADD</button>
+            </form>
+
         </div>
     </div>
     <div  class="container" ng-controller="TextCtrl">
         <table class="table table-striped">
             <thead>
                 <td>№</td>
-                <td>Name</td>
+                <td>Product</td>
                 <td>Price</td>
                 <td>Buy</td>
             </thead>
             <tbody>
-                <tr ng-repeat="item in data">
+                <tr ng-repeat="item in data | orderBy:' -price'" ng-class="item.isBuy ? 'buying' : null" >
                     <td>{{$index+1}}</td>
-                    <td>{{item.text}}</td>
-                    <td>{{item.price}}</td>
+                    <td>{{item.product}}</td>
+                    <td>{{item.price | customFilter }}</td>
                     <td><input type="checkbox" ng-model="item.isBuy"></td>
                 </tr>
             </tbody>
         </table>
+        <div product-list=""><p>Product List</p></div>
     </div>
 
 
